# jiri-jira-cli

./: .geminiignore  .gitignore  AGENTS.md  Cargo.toml  GEMINI.md  README.md  clean.adf.json  compact.adf.json  full_page.adf.json  jiri.ts  mise.toml  modified.adf.json  move_adf.py  tsconfig.json
.github/workflows/: release.yml
skills/jiri/: SKILL.md
src/: adf.rs  argv.ts  client.rs  colors.ts  config.rs  env.ts  fields.rs  fields.ts  formatter.rs  formatter.ts  jira.ts  main.rs  types.ts
src/commands/: assign.rs  attach.rs  comment.rs  completions.rs  config.rs  confluence.rs  create.rs  doctor.rs  edit.rs  mod.rs  open.rs  projects.rs  projects.ts  search.rs  search.ts  transition.rs  view.rs
