[package]
name = "jiri-jira-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
comfy-table = "7.1"
base64 = "0.21"
async-trait = "0.1"
futures = "0.3"
