[package]
name = "jiri-jira-cli"
version = "0.1.4"
edition = "2021"

[[bin]]
name = "jiri"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dirs = "5.0"
comfy-table = "7.2"
base64 = "0.22"
textwrap = "0.16"
pulldown-cmark = "0.13.3"
urlencoding = "2.1.3"
